--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "writeup"]
 	path = writeup
-	url = git@github.com:AnnikaStein/AN-23-062.git
+	url = git@github.com:AnnikaStein/writeup.git
+[submodule "copypasta"]
+	path = copypasta
+	url = git@github.com:AnnikaStein/copypasta.git
